--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,6 +66,8 @@
   cursor: pointer;
   border: 1px solid #ccc;
   border-radius: 8px;
+  margin-bottom: 10px;
+
   transition: all 0.3s ease-in-out;
 }
 .button:hover {
